--- a/index.html
+++ b/index.html
@@ -799,8 +799,8 @@ console.log(response.hometown);
         .attr("y", (yStart + (spacer*35)))//needs to calculate space that was taken up above
         .text("YOU WATCH: ")
         .style("font", "30px 'stellar'")
-        .style("fill", "black")
-        .style("opacity", 0); 
+        .style("fill", "black");
+        // .style("opacity", 0); 
         // .transition()
         // .delay(function(d,i){ return 400*i; }) //controls how many come on the screen
         // .duration(18000) //controls how fast is changes opacity
