--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     // create our canvas
     var canvas = d3.select("body").append("svg")
       .attr("width", width)
-     // .attr("height", 10300); //how can I adjust this to be adjustable to someones data  
+      .attr("height", 10300); //how can I adjust this to be adjustable to someones data  
 
 
 banner();
