--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ banner();
   window.fbAsyncInit = function() {
     FB.init({
       appId            : '343061712934729',
-      autoLogAppEvents : true,
+     // autoLogAppEvents : true,
       xfbml            : true,
       version          : 'v3.1'
     });
