--- a/index.html
+++ b/index.html
@@ -1043,8 +1043,12 @@ function fbLogout() {
 
 <p id="Wtext"> Welcome to the exhibition Identity 2.0. By logging into Facebook you give us premission to use your data to generate visulisations. These visulisations will help you explore your digital Identity! </p>
 <div id = "status"></div>
+
+<fb:login-button
+scope ="public_profile,user_birthday">
+</fb:login-button>
+
 <button 
-	scope = "public_profile,user_birthday"
 	class = "button" 
 	id="login" 
 	onclick = "login()" 
