--- a/index.html
+++ b/index.html
@@ -1050,12 +1050,12 @@ id="login"
 onclick = "login()" >
 </fb:login-button>
 
-<button 
+<!-- <button 
 	class = "button" 
 	id="login" 
 	onclick = "login()" 
 	>Login to Facebook
-</button>
+</button> -->
 <button class = "button2"id="logout" onclick="fbLogout()">Logout</button> 
 <button class = "button3"id="next" onclick="endVis()">Continue</button> 
 </body>
