--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@ function fbLogout() {
 <div id = "status"></div>
 
 <fb:login-button
-scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
+scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends,groups" 
 id="login" 
 onclick = "login()" >
 </fb:login-button>
