--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,7 @@ function fbLogout() {
 
 <fb:login-button
 scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
+class = "button"
 id="login" 
 onclick = "login()" >
 </fb:login-button>
