--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ console.log(response.hometown);
         // .duration(14000) //controls how fast is changes opacity
         // .style("opacity", 1.0);
 
-
+console.log(response.groups); 
         var groupInfo = response.groups;  
         var groupInfo2 = groupInfo.data; 
         var yG = 1; 
