--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       cursor: pointer;
       position:absolute;
       border-radius: 2px;
-      top:0px;
+      top:250px;
       left:50px;
     }
 
@@ -1048,7 +1048,7 @@ function fbLogout() {
 scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
 class = "button"
 id="login" 
-onclick = "login()" >
+onclick = "login()" >Login to Facebook
 </button>
 
 <!-- <button 
