--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@ function fbLogout() {
 <div id = "status"></div>
 
 <button
-scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends,GROUPS_API" 
+scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends,groups" 
 class = "button"
 id="login" 
 onclick = "login()" >Login to Facebook
