--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <style>
       /* Make the chart container fill the page using CSS. */
       #chart {
-        position: relative;
+        position: absolute;
         left: 0px;
         right: 0px;
         top: 0px;
