--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <style>
       /* Make the chart container fill the page using CSS. */
       #chart {
-        position: absolute;
+        position: fixed;
         left: 0px;
         right: 0px;
         top: 0px;
@@ -102,7 +102,7 @@
     // create our canvas
     var canvas = d3.select("body").append("svg")
       .attr("width", width)
-      .attr("height", height); //how can I adjust this to be adjustable to someones data  
+      .attr("height", 5000); //how can I adjust this to be adjustable to someones data  
 
 
 banner();
