--- a/index.html
+++ b/index.html
@@ -1049,12 +1049,12 @@ function fbLogout() {
 <p id="Wtext"> Welcome to the exhibition Identity 2.0. By logging into Facebook you give us premission to use your data to generate visulisations. These visulisations will help you explore your digital Identity! </p>
 <div id = "status"></div>
 
-<button
+<fb:login-button
 scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
 class = "button"
 id="login" 
 onclick = "login()" >Login to Facebook
-</button>
+</fb:login-button>
 
 <!-- <button 
 	class = "button" 
