--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       cursor: pointer;
       position:absolute;
       border-radius: 2px;
-      top:250px;
-      left:50px;
+/*      top:250px;
+      left:50px;*/
     }
 
         .button2 {
