--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@ function fbLogout() {
 scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
 class = "button"
 id="login" 
-onclick = "login()" >Login to Facebook
+onclick = "login()" >
 </fb:login-button>
 
 <!-- <button 
