--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         bottom: 0px;
       }
 
+      #login{
+      	top:250px;
+      	left:50px;
+      }
+
     .button {
       background-color: #3b5998;
       border: none;
@@ -1050,9 +1055,8 @@ function fbLogout() {
 <div id = "status"></div>
 
 <fb:login-button
-scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
-class = "button"
 id="login" 
+scope ="public_profile,user_birthday,user_gender,user_hometown,user_location,user_friends" 
 onclick = "login()" >
 </fb:login-button>
 
