--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       #login{
       	bottom:750px;
       	left:50px;
+      	background-color: #3b5998;
+      	border: none;
+      	padding: 10px 100px;
+      	text-align: center;
       }
 
     .button {
