--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       #login{
       	bottom:750px;
       	left:50px;
-      	background-color: #3b5998;
+/*      	background-color: #3b5998;
       	border: none;
       	padding: 10px 100px;
       	text-align: center;
@@ -27,7 +27,7 @@
       margin: 4px 2px;
       cursor: pointer;
       position:absolute;
-      border-radius: 2px;
+      border-radius: 2px;*/
       }
 
     .button {
