--- a/index.html
+++ b/index.html
@@ -640,6 +640,8 @@ function generalVis(){
 //==============================================================
     function theProfile(){
 
+document.getElementById('login').style.visibility = 'hidden';
+
       var yStart = 260; 
       var spacer = 50;
      // var fontSize = 30; 
