--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ document.getElementById('logout').style.visibility = 'hidden';
 	if(response.status === 'connected'){
 		document.getElementById('status');
 	    theProfile(); //load the next page of the visulisation
-	    document.getElementById('login').style.visibility = 'block';
+	    document.getElementById('login').style.visibility = 'hidden';
 	    document.getElementById('logout').style.visibility = 'visible';
 	    document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
@@ -170,7 +170,7 @@ document.getElementById('logout').style.visibility = 'hidden';
   			if(response.status === 'connected'){
 		document.getElementById('status');
     theProfile();
-    document.getElementById('login').style.visibility = 'block';
+    document.getElementById('login').style.visibility = 'hidden';
     document.getElementById('logout').style.visibility = 'visible';
     document.getElementById('Wtext').style.visibility = 'hidden';}
 		else if(response.status === 'not_authorized'){
@@ -641,6 +641,7 @@ function generalVis(){
     function theProfile(){
 
 document.getElementById('login').style.visibility = 'hidden';
+document.getElementById('fb:login-button').style.visibility = 'hidden';
 
       var yStart = 260; 
       var spacer = 50;
