--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ function generalVis(){
 //==============================================================
     function theProfile(){
 
-document.getElementById('login').style.visibility = 'block';
+document.getElementById('login').style.visibility = 'none';
 
       var yStart = 260; 
       var spacer = 50;
